--- a/frontchat/src/pages/Certificates/Certificates.css
+++ b/frontchat/src/pages/Certificates/Certificates.css
@@ -1,7 +1,5 @@
 .certificates {
   background: url("../../assets/back2.png");
-  background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
   width: 100%;
   display: flex;
@@ -9,7 +7,7 @@
   justify-content: center;
   padding-top: 10%;
   padding-bottom: 100px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(100px);
   background-position: center;
 }
 .sidenav{
@@ -52,7 +50,6 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(21, 21, 21, 0.582);
-  box-shadow: inset 0px 0px 100px rgba(26, 55, 104, 0.676);
   border-radius: 30px;
   border: 2px solid rgb(187, 204, 220);
   padding: 20px;
@@ -82,15 +79,14 @@
 }
 
 .l-right {
-  text-align: center;
   color: aliceblue;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   padding: 10px;
 }
 
 .l-right p {
   font-size: 1.2em;
   width: 90%;
+  height: 100%;
 }
 
 /* Responsive Design */
