--- a/frontchat/src/Components/Links/Links.css
+++ b/frontchat/src/Components/Links/Links.css
@@ -46,6 +46,11 @@
   text-decoration: none;
 }
 
+.l1{
+  padding-left: 20px;
+  font-size: 1.5em;
+}
+
 .side_head{
   color: #ffffff;
   writing-mode: vertical-rl;
@@ -57,15 +62,26 @@
 
 
 
-@media (max-width:480px) {
+@media (max-width:600px) {
   .inner_links p{
     font-size: 1.5em;
   }
   .inner_links{
     display: flex;
-    align-items: self-start;
+    align-items: center;
     justify-content: center;
+    gap: 2%;
     flex-direction: column;
-    padding-left: 10%;
+  }
+  .links{
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+  }
+  .side_head{
+    writing-mode: unset;
+    font-size: 4em;
   }
 }
