--- a/frontchat/src/Components/Skills/Skills.css
+++ b/frontchat/src/Components/Skills/Skills.css
@@ -4,11 +4,9 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 150px;
-  background-color: #9bc3e664;
-  background: linear-gradient(45deg, #9bc3e664, black 80%);
   border-radius: 50px;
+  background: none;
   margin-bottom: 100px;
-  backdrop-filter: blur(500px);
   margin-top: 100px;
 }
 
@@ -26,15 +24,15 @@
 }
 
 .inner_tech {
-  width: 90%;
+  width: 85%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 30px;
 }
 
 .tech_box {
-  background-color: #1b1d1e;
-  border: 2px solid #fff;
+  background-color: #1b1d1e7d;
+  border: 1px solid #ffffff;
   border-radius: 25px;
   padding: 20px;
   color: #fff;
@@ -44,6 +42,7 @@
   transition: all 0.5s ease;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
   height: fit-content+10svh;
+  backdrop-filter: blur(100px);
 }
 
 .tech_box:hover {
@@ -69,8 +68,8 @@
 .com_p {
   padding: 10px 5px;
   background-color: transparent;
-  border: 1.5px solid #0a73cf;
-  border-radius: 12px;
+  border: 1px solid #0a73cf28;
+  border-radius: 15px;
   font-size: 0.95rem;
   text-align: center;
   color: #fefefe;
